# delivery-drf-api

./: .codeclimate.yml  .dockerignore  .gitignore  Makefile  README.md  deploy-docker.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wait_db.sh
.github/workflows/: main.yaml
backup/: postgres-test-data.sql
docker/nginx/: nginx.conf
docker/parcel/: Dockerfile
docker/server/: Dockerfile  gunicorn.sh  runserver.sh
foodcartapp/: admin.py  location.py  models.py  selectors.py  serializers.py  services.py  views.py
foodcartapp/migrations/: 0038_order.py  0039_orderproduct.py  0042_auto_20210906_1001.py  0043_order_status.py  0044_order_comment.py  0045_auto_20210907_0823.py  0046_order_payment_method.py  0048_auto_20210915_0415.py  0049_alter_orderproduct_cost.py  0050_alter_order_payment_method.py
location/: models.py
location/migrations/: 0001_initial.py
restaurateur/: views.py
restaurateur/templates/: order_items.html
scripts/: setup.sh
src/: .flake8  package-lock.json
src/backend/: .flake8
src/backend/bundles/: index.js  index.js.map
src/backend/config/: settings.py  wsgi.py
src/backend/core/: apps.py  check_user.py  helpers.py
src/backend/foodcartapp/: admin.py  apps.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/backend/location/: apps.py  models.py  selectors.py
src/backend/restaurateur/: apps.py  forms.py  serializers.py  (+1 more)
src/bundles/: index.css  index.css.map
src/foodcartapp/: selectors.py  serializers.py  services.py
src/location/: admin.py
src/star_burger/: settings.py
star_burger/: settings.py
tests/foodcartapp/: test_models.py  test_services.py  test_views.py
(+37 files in other folders)
